# main.go
@@ -76,6 +76,9 @@ func main() {
 	router.HandleFunc("/api/user/tenants",
 		controllers.CreateTenant).Methods("POST")
 
+	router.HandleFunc("/api/user/tenants/{tenant_name}/sites/{site_name}/buildings/{building_name}/rooms/{room_name}/racks/{rack_name}/devices/{device_name}/subdevices/{subdevice_name}/subdevice1s",
+		controllers.GetSubdevice1sUsingNamedSubdeviceOfTenant).Methods("GET")
+
 	router.HandleFunc("/api/user/tenants/{tenant_name}/sites/{site_name}/buildings/{building_name}/rooms/{room_name}/racks/{rack_name}/devices/{device_name}/subdevices/{subdevice_name}",
 		controllers.GetNamedSubdeviceOfTenant).Methods("GET")
 
