# swagger.json
@@ -7036,6 +7036,84 @@
         }
       }
     },
+    "/api/user/tenants/{tenant_name}/sites/{site_name}/buildings/{building_name}/rooms/{room_name}/racks/{rack_name}/devices/{subdevice_name}/subdevices/{subdevice_name}/{subdevice1_name}": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "tenants"
+        ],
+        "summary": "Gets all Subdevice1s of a Named Subdevice of a Tenant from the system.",
+        "operationId": "GetFromTenant",
+        "parameters": [
+          {
+            "type": "string",
+            "default": "INFINITI",
+            "description": "Name of desired tenant",
+            "name": "tenant_name",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "default": "SiteA",
+            "description": "Name of desired site",
+            "name": "site_name",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "default": "BldgA",
+            "description": "Name of desired building",
+            "name": "building_name",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "default": "R1",
+            "description": "Name of desired room",
+            "name": "room_name",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "default": "Rack01",
+            "description": "Name of desired rack",
+            "name": "rack_name",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "default": "Rack01",
+            "description": "Name of desired device",
+            "name": "device_name",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "default": "SubdeviceA",
+            "description": "Name of desired subdevice",
+            "name": "subdevice_name",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Found"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/api/user/tenants?": {
       "get": {
         "description": "Gets a Tenant using any attribute (with the exception of description) via query in the system\nThe attributes are in the form {attr}=xyz\u0026{attr1}=abc\nAnd any combination can be provided given that at least 1 is provided.",
